--- a/package.json
+++ b/package.json
@@ -1,12 +1,12 @@
 {
-  "name": "Litesight",
-  "description": "An open-source frontend for the Litesight API. The Litesight API provides you with a convenient, powerful and simple way to query and broadcast data on the Litecoin network and build your own services with it.",
+  "name": "Marssight",
+  "description": "An open-source frontend for the Litesight API. The Litesight API provides you with a convenient, powerful and simple way to query and broadcast data on the Marscoin network and build your own services with it.",
   "version": "0.2.5",
   "author": {
-    "name": "pembo210",
-    "email": "pembo210@gmail.com"
+    "name": "novalis78",
+    "email": "novalis78@gmail.com"
   },
-  "repository": "git://github.com/pembo210/Litesight.git",
+  "repository": "git://github.com/marscoin/Marssight.git",
   "contributors": [
     {
       "name": "SS",
@@ -18,9 +18,9 @@
     }
   ],
   "bugs": {
-    "url": "https://github.com/pembo210/Litesight/issues"
+    "url": "https://github.com/marscoin/Marssight/issues"
   },
-  "homepage": "https://github.com/pembo210/Litesight",
+  "homepage": "https://github.com/marscoin/Marssight",
   "license": "MIT",
   "keywords": [
     "insight",
@@ -31,13 +31,13 @@
     "front-end"
   ],
   "scripts": {
-    "start": "INSIGHT_PUBLIC_PATH=public node node_modules/.bin/Litesight-bitcore-api"
+    "start": "INSIGHT_PUBLIC_PATH=public node node_modules/.bin/Marssight-api"
   },
   "dependencies": {
-    "Litesight-api": "git://github.com/pembo210/Litesight-api.git"
+    "Litesight-api": "git://github.com/marscoin/Marssight-api.git"
   },
   "devDependencies": {
-    "bower": "~1.2.8",
+    "bower": "~1.8.8",
     "grunt": "~0.4.2",
     "grunt-cli": "~0.1.11",
     "grunt-contrib-jshint": "~0.8.0",
